system/envoy-gateway/eg.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: eg
  namespace: envoy-gateway
spec:
  gatewayClassName: eg
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      hostname: '*.domain.example.com'
      name: http
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: '*.domain.example.com'
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            name: k3s-https
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: All
      hostname: '*.domain.example.com'
      name: https-domain-example-com
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            name: domain-https
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: All
      hostname: '*.domain2.example.com'
      name: https-domain2-example-com
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - kind: Secret
            name: domain2-https
        mode: Terminate
