system/envoy-gateway/https-redirect.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  namespace: envoy-gateway
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway
      sectionName: http
  rules:
    - filters:
        - requestRedirect:
            scheme: https
            port: 443
            statusCode: 301
          type: RequestRedirect
